[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wht"
version = "0.1.0"
description = "A lightning-fast snippet library and executor distributed via uvx."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.1",
    "pyperclip>=1.8.2",
]

[project.scripts]
wht = "wht.main:app"